--- a/report/assets/styles.css
+++ b/report/assets/styles.css
@@ -1879,8 +1879,8 @@ details[open] .lh-clump-toggletext--hide { display: block;}
 */
 @media screen and (max-width: 535px) {
   .lh-tooltip {
-    min-width: 45vw;
-    padding: 3vw;
+    min-width: 45cqi;
+    padding: 3cqi;
   }
 }
 
@@ -1889,8 +1889,8 @@ details[open] .lh-clump-toggletext--hide { display: block;}
 */
 @container lh-container (max-width: 535px) {
   .lh-tooltip {
-    min-width: 45vw;
-    padding: 3vw;
+    min-width: 45cqi;
+    padding: 3cqi;
   }
 }
 
@@ -2026,6 +2026,10 @@ details[open] .lh-clump-toggletext--hide { display: block;}
   left: 6px;
 }
 
+.lh-meta__item:hover .lh-tooltip {
+  right: auto;
+  left: 6px;
+}
 /**
 * This media query is a temporary fallback for browsers that do not support `@container query`.
 * TODO: remove this media query when `@container query` is fully supported by browsers
